--- a/sharqiyya-ember/app/templates/main/index.hbs
+++ b/sharqiyya-ember/app/templates/main/index.hbs
@@ -19,38 +19,11 @@
     <div class="homepage-content__title">
       15 EVENTS FOUND ON SATURDAY AUGUST 9
     </div>
-    <div class="homepage-content__events-list">
 
-      {{#each model.events as |event|}}
-        <div class="event-card">
-          <div class="event-card__like-button event-card__like-button_liked">
-            <img src="images/icons/heart-white.svg"/>
-          </div>
-          <img src='images/events/event-{{event.id}}.png' class="event-card__image" />
-          <div class="event-card__details">
-            <div class="event-card__from-to">
-              {{event.date}}
-            </div>
-            <div class="event-card__title">
-              {{event.title}}
-            </div>
-            <div class="event-card__timing-and-location">
-              <img class="event-card__icon" src="images/icons/time.svg">
-              {{event.time}}
-            </div>
-            <div class="event-card__timing-and-location">
-              <img class="event-card__icon" src="images/icons/location.svg">
-              {{event.location}}
-            </div>
-            <div class="event-card__tags">
-              <div class="event-card__tag"># Arts & Culture</div>
-              <div class="event-card__tag">#Conferences & Workshops</div>
-            </div>
-          </div>
-        </div>
-      {{/each}}
-
-    </div>
+    {{events-list
+      day="02-26-2020"
+      events=model.events
+    }}
 
     <div class="homepage-content__see-more">
       <button class="tags-bar__tag tags-bar__tag_color_orange">See more events (213)</button>
