--- a/sharqiyya-ember/app/styles/blocks/app-bar.scss
+++ b/sharqiyya-ember/app/styles/blocks/app-bar.scss
@@ -61,7 +61,7 @@
 .app-bar__location-logo {
   width: 15px;
   height: 15px;
-  background-image: url('/../../images/icons/location.svg');
+  background-image: url('/images/icons/location.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
