--- a/sharqiyya-ember/app/templates/components/dates-bar.hbs
+++ b/sharqiyya-ember/app/templates/components/dates-bar.hbs
@@ -1,11 +1,11 @@
 <div class="dates-bar__left">
-  <img class="dates-bar__arrow" src="images/icons/back-arrow-grey.svg">
+  <img class="dates-bar__arrow" src="/images/icons/back-arrow-grey.svg">
   <div class="dates-bar__hide-scroll">
     <div class="dates-bar__dates-list">
       <div class="dates-bar__box dates-bar__box_month-year">
         <div class="dates-bar__box-top">
           {{month}}
-          <img class="dates-bar__arrow-down" src="images/icons/arrow-down.svg">
+          <img class="dates-bar__arrow-down" src="/images/icons/arrow-down.svg">
         </div>
         <div class="dates-bar__box-bottom">{{year}}</div>
       </div>
