--- a/sharqiyya-ember/app/templates/components/event-card.hbs
+++ b/sharqiyya-ember/app/templates/components/event-card.hbs
@@ -1,8 +1,8 @@
-<div class="event-card">
+<div class="event-card" onclick={{action "showEvent"}}>
   <div class="event-card__like-button event-card__like-button_liked">
-    <img src="images/icons/heart-white.svg"/>
+    <img src="/images/icons/heart-white.svg"/>
   </div>
-  <img src='images/events/event-{{id}}.png' class="event-card__image" />
+  <img src='/images/events/event-{{id}}.png' class="event-card__image" />
   <div class="event-card__details">
     <div class="event-card__from-to">
       {{dateString}}
@@ -11,18 +11,17 @@
       {{title}}
     </div>
     <div class="event-card__timing-and-location">
-      <img class="event-card__icon" src="images/icons/time.svg">
+      <img class="event-card__icon" src="/images/icons/time.svg">
       {{timeString}}
     </div>
     <div class="event-card__timing-and-location">
-      <img class="event-card__icon" src="images/icons/location.svg">
+      <img class="event-card__icon" src="/images/icons/location.svg">
       {{location}}
     </div>
     <div class="event-card__tags">
-      <div class="event-card__tag"># Arts & Culture</div>
-      <div class="event-card__tag">#Conferences & Workshops</div>
+      {{#each tags as |tag|}}
+        <div class="event-card__tag"># {{tag.title}}</div>
+      {{/each}}
     </div>
   </div>
 </div>
-
-{{event.eventDates.firstObject.date}}
