--- a/sharqiyya-ember/app/templates/main.hbs
+++ b/sharqiyya-ember/app/templates/main.hbs
@@ -2,18 +2,18 @@
   <div class="app-bar">
     <div class="app-bar__max">
       <div class="app-bar__left">
-        <img class="app-bar__menu app-bar__element-left" src="images/icons/menu.svg" />
+        <img class="app-bar__menu app-bar__element-left" src="/images/icons/menu.svg" />
         <div class="app-bar__element-left">Today: AUG 09, 2016</div>
         <a href="javascript:void(0)" class="app-bar__element app-bar__element-left">Browse Events</a>
         <div class="app-bar__element-left app-bar__location">
           <div class="app-bar__location-logo"></div>
-          <!-- <img src="images/icons/location.svg"> -->
+          <!-- <img src="/images/icons/location.svg"> -->
           <a href="javascript:void(0)" class="app-bar__element"> Eastern Province</a>
         </div>
       </div>
 
       <div class="app-bar__middle">
-        <img src="images/icons/logo.svg"/>
+        <img src="/images/icons/logo.svg"/>
       </div>
 
       <div class="app-bar__right">
@@ -23,32 +23,21 @@
       </div>
     </div>
   </div>
-  <div class="dates-bar">
-    <div class="dates-bar__max">
-      {{dates-bar max= 30}}
-      <img class="dates-bar__arrow" src="images/icons/forward-arrow-grey.svg">
-
-      <div class="dates-bar__right">
-        <img src="images/icons/search.svg">
-        <input type="search" placeholder="Search for an event or activity" class="dates-bar__search" />
-      </div>
-    </div>
-  </div>
 </div>
 
 <div class="main-page">
   <div class="header-phone">
     <div class="header-phone__left">
-      <img src="images/icons/menu-phone.svg">
+      <img src="/images/icons/menu-phone.svg">
     </div>
     <div class="header-phone__middle">
-      <img src="images/icons/logo.svg"/>
+      <img src="/images/icons/logo.svg"/>
     </div>
     <div class="header-phone__right">
       <div class="header-phone__right-left"></div>
       <div class="header-phone__right-right">
-        <img src="images/icons/location-phone.svg">
-        <img src="images/icons/search-phone.svg">
+        <img src="/images/icons/location-phone.svg">
+        <img src="/images/icons/search-phone.svg">
       </div>
     </div>
   </div>
