--- a/sharqiyya-ember/app/templates/main/event.hbs
+++ b/sharqiyya-ember/app/templates/main/event.hbs
@@ -1,267 +1,28 @@
 <div class="main-page">
   <header class="header-phone">
     <div class="header-phone__back">
-      <img src="images/icons/back-phone.svg" alt="Back">
+      <img src="/images/icons/back-phone.svg" alt="Back">
     </div>
     <div class="header-phone__title">
       Night
     </div>
     <div class="header-phone__empty"></div>
   </header>
-  <header class="header">
-    <div class="app-bar">
-      <div class="app-bar__max">
-        <div class="app-bar__left">
-          <img class="app-bar__menu app-bar__element-left" src="images/icons/menu.svg" />
-          <div class="app-bar__element-left">Today: AUG 09, 2016</div>
-          <a href="javascript:void(0)" class="app-bar__element app-bar__element-left">Browse Events</a>
-          <div class="app-bar__element-left app-bar__location">
-            <div class="app-bar__location-logo"></div>
-            <!-- <img src="images/icons/location.svg"> -->
-            <a href="javascript:void(0)" class="app-bar__element"> Eastern Province</a>
-          </div>
-        </div>
-
-        <div class="app-bar__middle">
-          <img src="images/icons/logo.svg"/>
-        </div>
-
-        <div class="app-bar__right">
-          <a href="javascript:void(0)" class="app-bar__element app-bar__element-right">Login</a>
-          <button class="app-bar__element-right app-bar__add-event">Add Event</button>
-          <a href="javascript:void(0)" class="app-bar__element app-bar__element-right">بالعربية</a>
-        </div>
-      </div>
-    </div>
-    <div class="dates-bar">
-
-    </div>
-    <div class="tags-bar">
-
-    </div>
-  </header>
 
   <div class="back-bar">
     <div class="back-bar__back">
-      <img class="back-bar__back-image" alt="Back" src="images/icons/back.svg">
+      <img class="back-bar__back-image" alt="Back" src="/images/icons/back.svg">
       Back
     </div>
   </div>
 
   <article class="event-content">
-    <div class="event-details">
-      <h1 class="event-details__night" >Night — ليل</h1>
-      <div class="event-details__date">
-        <div class="event-details__date-left">
-          <div class="event-details__date-box">
-            <div class="event-details__date-box-text-small">AUG</div>
-            <div class="event-details__date-box-text-big">10</div>
-            <div class="event-details__date-box-text-plus">+</div>
-          </div>
-          <div class="event-details__date-text-day-time">
-            <meta itemprop="startDate" content="2016-08-10T09:00" />
-            <meta itemprop="endDate" content="2016-08-10T17:00" />
-            <div class="event-details__date-text-day">
-              Tuesday Aug 10 2016
-            </div>
-            <div class="event-details__date-text-time">
-              09:00 am till 05:00 pm
-            </div>
-          </div>
-          <img class="event-details__like-button" alt="Like Button" src="images/icons/like.svg"/>
-        </div>
-        <div class="event-details__date-right">
-          <div class="event-details__show-text">
-            Show more dates
-          </div>
-          <div class="event-details__show-text-mobile">More</div>
-          <img class="event-details__show-arrow" alt="Right Arrow Icon" src="images/icons/arrow-right.svg">
-        </div>
-      </div>
-
-      <div class="event-details__dates-saved">
-        <img class="event-details__dates-saved-heart" alt="Heart Icon" src="images/icons/heart.svg">
-        <p>2 dates saved</p>
-      </div>
-
-      <div class="event-details__location">
-        <div class="event-details__location-left">
-          <img class="event-details__location-image" alt="Location Icon" src="images/icons/location-grey.svg">
-          <p class="event-details__location-text">Beirut Digital District, Bachoura, Beirut</p>
-          <meta itemprop="latitude" content="33.8914" />
-				  <meta itemprop="longitude" content="35.5054" />
-        </div>
-        <div class="event-details__location-right">
-          <div class="event-details__show-text">
-            Show map
-          </div>
-          <img class="event-details__show-arrow" alt="Right Arrow Icon" src="images/icons/arrow-right.svg">
-        </div>
-      </div>
-
-      <div class="event-details__shares-and-links">
-        <div class="event-details__shares">
-          <div class="event-details__shares-number">214</div>
-          <div class="event-details__shares-text">Shares</div>
-        </div>
-        <div class="event-details__links">
-          <img src="images/icons/message-link.svg" alt="Message Icon">
-          <img src="images/icons/twitter-link.svg" alt="Twitter Icon">
-          <img src="images/icons/whatsapp-link.svg" alt="Whatsapp Icon">
-          <img src="images/icons/facebook-link.svg" alt="Facebook Icon">
-        </div>
-      </div>
-
-      <div class="event-details__text">
-        <div class="event-details__show-text">
-          # Arts & Culture&nbsp;&nbsp;&nbsp;&nbsp;#Conferences & Workshops
-        </div>
-        <div class="event-details__text-description">
-          A dance performance by Ali Chahrour<br>
-          January 24 to 27, 2019 - Al Madina Theatre, Beirut<br><br>
-
-          Night is a dance concert whose approach and aesthetics draw their inspiration from the dense archive of love and romance in classical Arabic poetry and from contemporary  stories of lovers and their cruel separation.<br><br>
-
-          This work references stories from the cultural memory of the Levant and Mesopotamia among others, about the fate of lovers who challenged social and religious systems, and whose bodies were punished and sentenced to suffer the distance of separation as well as the hope of impossible reunions.<br><br>
-
-          The performance records the vicissitudes of lovers and their resistance, leading up to the moment when they fall and fade away. The exhausted body succumbs, and with it falls every action and instrument/tools that the performers had carried throughout the show. The fall reveals the fragility of the lover/performer, and the frailty of all the methods and tools at his disposal. The stage becomes the battlefield after the battle, where the audience has just witnessed the death, or rather, the birth of its heroes.<br><br>
-
-          Directed and choreographed by: Ali Chahrour / Performed by: Hala Omran, Aya Metwalli, Simona Abdallah, Sharif Sehnaoui and Ali Chahrour / Music by: Sharif Sehnaoui, Simona Abdallah and Aya Metwalli / Dramaturgy: Junaid Sarieddine<br><br>
-
-          Text adaptation by: Hala Omran and Junaid Sarieddine / Light design and technical director: Guillaume Tesson / Sound design: Khyam Allami / Costumes: Ahmed Amer / Stage manager and Assistant Director: Haera Slim / Production Manager: Christel Salem and Haera Slim / Graphic design and Communications: be:kult / Poster and brochure photography.<br><br>
-        </div>
-        <div class="event-details__show-text">
-          www.facebook.com/Human-Lie-Detection-547…
-        </div>
-      </div>
-
-    </div>
+    {{event-details dates=model.eventDates location=model.location title=model.title url=model.url tags=model.tags details=model.details}}
     <div class="event-image">
-      <img class="event-image__image" src="images/events/picture.png" alt="Girl Behind Flowers">
+      <img class="event-image__image" src="/images/events/event-{{model.id}}.png" alt="Girl Behind Flowers">
     </div>
   </article>
 
-  <div class="related-events">
-    <div class="related-events__max">
-      <div class="related-events__title">Related Events</div>
-      <div class="related-events__list">
-
-
-        <div class="related-events__event">
-          <img src="images/events/related-event-1.png" alt="Fireworks and Crowd" class="related-events__event-image" />
-          <div class="related-events__event-details">
-            <div class="related-events__from-to">
-              Jan 11 Till Mar 08
-            </div>
-            <div class="related-events__event-title">
-              BIG CITY LIFE - Exhibition Opening
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Clock Icon" src="images/icons/time.svg">
-              10:00 am till 11:00 pm
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Location Icon" src="images/icons/location.svg">
-              Salon Beyrouth restaurant, Mohammed Abdel Baki street, Beirut, Lebanon
-            </div>
-            <div class="related-events__event-tags">
-              # Arts & Culture&nbsp;&nbsp;&nbsp;&nbsp;#Conferences & Workshops
-            </div>
-          </div>
-        </div>
-
-
-        <div class="related-events__event">
-          <img src="images/events/related-event-2.png" alt="Aqua Museum" class="related-events__event-image" />
-          <div class="related-events__event-details">
-            <div class="related-events__from-to">
-               Jan 10 Till Jan 27
-            </div>
-            <div class="related-events__event-title">
-              Dar El-Nimer for Arts & Culture
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Clock Icon" src="images/icons/time.svg">
-              10:00 am till 11:00 pm
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Location Icon" src="images/icons/location.svg">
-              Salon Beyrouth restaurant, Mohammed Abdel Baki street, Beirut, Lebanon
-            </div>
-            <div class="related-events__event-tags">
-              # Arts & Culture&nbsp;&nbsp;&nbsp;&nbsp;#Conferences & Workshops
-            </div>
-          </div>
-        </div>
-
-
-        <div class="related-events__event">
-          <img src="images/events/related-event-3.png" alt="Dinosaur Painting" class="related-events__event-image" />
-          <div class="related-events__event-details">
-            <div class="related-events__from-to">
-              Jan 10 Till Jan 27
-            </div>
-            <div class="related-events__event-title">
-              The Other
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Clock Icon" src="images/icons/time.svg">
-              8:30 PM - 11:30 PM
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Location Icon" src="images/icons/location.svg">
-              Sunflower - Douwar el Shams, Beirut, Lebanon 4011
-            </div>
-            <div class="related-events__event-tags">
-              # Arts & Culture&nbsp;&nbsp;&nbsp;&nbsp;#Conferences & Workshops
-            </div>
-          </div>
-        </div>
-
-
-        <div class="related-events__event">
-          <img src="images/events/related-event-4.png" alt="Men Playing Music" class="related-events__event-image" />
-          <div class="related-events__event-details">
-            <div class="related-events__from-to">
-              Jan 11 Till Mar 08
-            </div>
-            <div class="related-events__event-title">
-              The Other
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Clock Icon" src="images/icons/time.svg">
-              8:30 PM - 11:30 PM
-            </div>
-            <div class="related-events__event-timing-and-location">
-              <img class="related-events__icon" alt="Location Icon" src="images/icons/location.svg">
-              Sunflower - Douwar el Shams, Beirut, Lebanon 4011
-            </div>
-            <div class="related-events__event-tags">
-              # Arts & Culture&nbsp;&nbsp;&nbsp;&nbsp;#Conferences & Workshops
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="related-events__phone-more">
-        <img src="images/icons/more-phone.svg" alt="Next Event?">
-      </div>
-    </div>
-  </div>
-
-  <footer class="footer">
-    <div class="footer__max">
-      <div class="footer__left">
-        Terms of Use | Privacy Policy
-      </div>
-      <div class="footer__middle">
-        <img src="images/icons/footer-logos.svg" alt="Facebook, Instagram, Twitter, Youtube, Google Plus and LinkedIn Logos">
-      </div>
-      <div class="footer__right">
-        © 2012 - 2019. All rights reserved.
-      </div>
-    </div>
-  </footer>
+  {{related-events}}
 
 </div>
