--- a/sharqiyya-ember/app/styles/blocks/event-card.scss
+++ b/sharqiyya-ember/app/styles/blocks/event-card.scss
@@ -32,6 +32,9 @@
   border-radius: 100px;
   z-index: 3;
   background-color: white;
+  background-image: url("/images/icons/heart-white-border.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   box-shadow: 0px 0px 1px;
   cursor: pointer;
   @include for-phone-only {
@@ -41,6 +44,9 @@
 
 .event-card__like-button_liked {
   background-color: #F8A62B;
+  background-image: url("/images/icons/heart-white.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .event-card ~ .event-card ~ .event-card {
