--- a/sharqiyya-ember/app/styles/blocks/homepage-content.scss
+++ b/sharqiyya-ember/app/styles/blocks/homepage-content.scss
@@ -1,5 +1,8 @@
 .homepage-content {
+  height: 100%;
+  min-height: 100%;
   @include maxwidth;
+
   @include for_phone_only {
     display: flex;
     flex-direction: column;
@@ -12,7 +15,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 47px;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .homepage-content__title {
