commit before Loading

--- a/sharqiyya-ember/app/templates/main.hbs
+++ b/sharqiyya-ember/app/templates/main.hbs
@@ -13,7 +13,9 @@
       </div>
 
       <div class="app-bar__middle">
-        <img src="/images/icons/logo.svg"/>
+        {{#link-to "main.index"}}
+          <img class="app-bar__logo" src="/images/icons/logo.svg"/>
+        {{/link-to}}
       </div>
 
       <div class="app-bar__right">
