--- a/sharqiyya-ember/app/styles/base.scss
+++ b/sharqiyya-ember/app/styles/base.scss
@@ -1,5 +1,18 @@
+html, body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
 body {
   margin: 0;
+
+  > .ember-view {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
 }
 
 a {
