--- a/sharqiyya-ember/app/styles/blocks/event-card.scss
+++ b/sharqiyya-ember/app/styles/blocks/event-card.scss
@@ -9,6 +9,7 @@
   border-bottom: 2px solid rgba(0,0,0,0.16);
   margin-bottom: 20px;
   transition: 0.3s;
+  cursor: pointer;
   @include for-phone-only {
     width: 350px;
   }
