--- a/sharqiyya-ember/app/templates/main/index.hbs
+++ b/sharqiyya-ember/app/templates/main/index.hbs
@@ -16,6 +16,7 @@
   {{/if}}
   {{tags-bar
     tags=tags
+    filter=filter
     onFilter=(action "onFilter")
   }}
   <div class="homepage-content">
